syntax = "proto3";

import "date.proto";
import "google/protobuf/empty.proto";

package indications;

service Indications {
    rpc PostIndication(PostIndicationRequest) returns (google.protobuf.Empty) {}
    rpc GetIndications(GetIndicationsRequest) returns (IndicationsResponse) {}
    rpc PostIndicationType(PostIndicationTypeRequest) returns (google.protobuf.Empty) {}
    rpc GetIndicationsTypes(GetIndicationsTypesRequest) returns (IndicationsTypesResponse) {}
}

// Indication

message GetIndicationsRequest {
    int32 indicationTypeID = 1;
    int32 maxQuantity = 2; // The number of indications will be 0 <= N <= max_quantity, N is integer
}

message PostIndicationRequest {
    int32 indicationsTypeID = 1;
    int32 indication = 2;
    optional Date createdAt = 3; // If date has a default value than DB value will date.now()
}

message Indication {
    int32 id = 1;
    int32 indication = 2;
    int32 indicationTypeID = 3;
    Date createdAt = 4;
}

message IndicationsResponse {
    repeated Indication indications = 1;
}

// Indication Type

message GetIndicationsTypesRequest {
    int32 addressID = 1;
    int32 maxQuantity = 2;
}

message PostIndicationTypeRequest {
    int32 addressID = 1;
    string type = 2;
}

message IndicationType {
    int32 id = 1;
    int32 addressID = 2;
    string type = 3;
}

message IndicationsTypesResponse {
    repeated IndicationType indicationsTypes = 1;
}